# bugbounty-hq

./: .env.example  .gitignore  README.md  USER_GUIDE.md  alembic.ini  app.py  pyproject.toml  requirements.txt  task.md  wsgi.py
bugbountyhq/: __init__.py  auth.py  config.py  db.py  errors.py  integration_webhooks.py  migrations.py  models.py  security.py  validation.py
bugbountyhq/routes/: __init__.py  api.py  auth.py  integrations.py  web.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_users.py  0003_integration_events.py
templates/: dashboard.html  error.html  index.html  login.html  program_detail.html  program_form.html  programs.html  register.html  researchers.html  submission_detail.html  submission_form.html  submissions.html
