[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbountyhq"
version = "0.1.0"
description = "Bug bounty program management platform"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Flask>=3.0.0,<4",
    "SQLAlchemy>=2.0.45,<3",
    "alembic>=1.16.4,<2",
    "psycopg[binary]>=3.2.9,<4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bugbountyhq*"]
